# Fine-Tuning-Expert-Chatbot-

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-fastapi.yml  deploy-streamlit.yml
app/api/: main.py  schemas.py
app/api/routes/: query.py
app/core/: config.py  embeddings.py  llm.py
app/core/prompts/: guardrails.md
app/ingestion/: chunking.py  index_milvus.py  load_pdfs.py  parse_docling.py
app/rag/: chain.py  memory.py  retriever.py
app/ui/: streamlit_app.py
docker/fastapi/: .dockerignore  Dockerfile
docker/streamlit/: .dockerignore  Dockerfile
scripts/: ingest.py
scripts/ec2/: restart_container.sh  restart_streamlit.sh
